--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\leejh\\anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Users\\sun41\\Anaconda3\\python.exe"
 }
